[package]
name = "mqttooth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bluer = { version = "0.17.4", features = [ "full" ] }
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
rumqttc = "0.25.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [ "full" ] }
