[package]
name = "mqttooth"
authors = ["Jean-Charles Quillet <jeancharles.quillet@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An MQTT to Bluetooth Low Energy bridge"
readme = "README.md"
homepage = "https://github.com/jecaro/mqttooth"
repository = "https://github.com/jecaro/mqttooth"
keywords = ["cli", "mqtt", "ble", "iot"]
categories = ["command-line-utilities"]
exclude = [
    "flake.nix",
    "flake.lock",
    "badger.jpg",
]

[dependencies]
anyhow = "1.0.102"
bluer = { version = "0.17.4", features = [ "full" ] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
rumqttc = "0.25.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [ "full" ] }
